--- a/Materiaal/Materiaal.csproj
+++ b/Materiaal/Materiaal.csproj
@@ -174,6 +174,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Artikel\Artikel.cs" />
+    <Compile Include="Models\Artikel\Categorie.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
