--- a/Materiaal/Materiaal.csproj
+++ b/Materiaal/Materiaal.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\TaksController.cs" />
     <Compile Include="DAL\Context.cs" />
     <Compile Include="DAL\Initializer.cs" />
     <Compile Include="Global.asax.cs">
@@ -186,6 +187,11 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Artikels\ArtikelCreateViewModel.cs" />
     <Compile Include="ViewModels\Artikels\ArtikelDeleteViewModel.cs" />
@@ -248,9 +254,6 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Artikels\Delete.cshtml" />
-    <Content Include="Views\Artikels\Details.cshtml" />
-    <Content Include="Views\Artikels\Edit.cshtml" />
     <Content Include="Views\Artikels\Index.cshtml" />
     <Content Include="Views\Categories\Create.cshtml" />
     <Content Include="Views\Categories\Delete.cshtml" />
@@ -258,6 +261,14 @@
     <Content Include="Views\Categories\Edit.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Views\Artikels\Create.cshtml" />
+    <Content Include="Views\Artikels\Details.cshtml" />
+    <Content Include="Views\Artikels\Edit.cshtml" />
+    <Content Include="Views\Artikels\Delete.cshtml" />
+    <Content Include="Views\Taks\Create.cshtml" />
+    <Content Include="Views\Taks\Delete.cshtml" />
+    <Content Include="Views\Taks\Details.cshtml" />
+    <Content Include="Views\Taks\Edit.cshtml" />
+    <Content Include="Views\Taks\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -269,6 +280,12 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
